--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="intro">
             <div class="row">
                 <div class="column">
-                    <img class="intro_img" src="images/intro.jpg" alt="intro_img">
+                    <img class="intro_img" src="Images/intro.jpg" alt="intro_img">
                 </div>
                 <div class="column">
                     <h1 class="intro_text">Producing Quality Content For You</h1>
@@ -97,7 +97,7 @@
 
           </section>
 
-        <img class="blog_img" src="images/blog1.jpg" alt="blog">
+        <img class="blog_img" src="Images/blog1.jpg" alt="blog">
         
               <!-- Blog of the month -->
 
